--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@angular/router": "^18.0.0",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.1",
-    "@capacitor/core": "^6.2.0",
-    "@capacitor/geolocation": "^6.1.0",
+    "@capacitor/core": "6.2.0",
+    "@capacitor/geolocation": "6.1.0",
     "@capacitor/haptics": "6.0.1",
+    "@capacitor/ios": "^6.2.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
@@ -49,7 +50,7 @@
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "6.2.0",
+    "@capacitor/cli": "6.2.1",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.13",
